; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_mutex.c_unlock_mtx.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_mutex.c_unlock_mtx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lock_object = type { i32 }
%struct.mtx = type { i32 }

@MA_OWNED = common dso_local global i32 0, align 4
@MA_NOTRECURSED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @unlock_mtx(%struct.lock_object* %0) #0 {
  %2 = alloca %struct.lock_object*, align 8
  %3 = alloca %struct.mtx*, align 8
  store %struct.lock_object* %0, %struct.lock_object** %2, align 8
  %4 = load %struct.lock_object*, %struct.lock_object** %2, align 8
  %5 = bitcast %struct.lock_object* %4 to %struct.mtx*
  store %struct.mtx* %5, %struct.mtx** %3, align 8
  %6 = load %struct.mtx*, %struct.mtx** %3, align 8
  %7 = load i32, i32* @MA_OWNED, align 4
  %8 = load i32, i32* @MA_NOTRECURSED, align 4
  %9 = or i32 %7, %8
  %10 = call i32 @mtx_assert(%struct.mtx* %6, i32 %9)
  %11 = load %struct.mtx*, %struct.mtx** %3, align 8
  %12 = call i32 @mtx_unlock(%struct.mtx* %11)
  ret i64 0
}

declare dso_local i32 @mtx_assert(%struct.mtx*, i32) #1

declare dso_local i32 @mtx_unlock(%struct.mtx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
